# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.78 2005/03/07 02:29:19 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  6 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fix for swapped broadcast and netmask in Networking.py. Put empty try/except
  block around line to set snapshot URI in PortageTree.py. Loading an install
  profile uses a temporary GLIInstallProfile object to parse and then assigns
  it to the main object so the master object doesn't get left in an
  inconsistent state after a failed profile load.

  5 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Entry fields and slider in PartProperties.py now sync with each other.
  Sliding the slider will update the entry fields and changing an entry
  field will update the slider and the other entry field. Added help label
  below slider and above entry fields.

  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Quick fix to empty the fifo

  17 Feb 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - Added a lot of UI reaction details.  It now
  reacts in a reasonable way that users will expect. Added support
  for each section to have "default" packages selected when you
  select the category.

  16 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added PartitioningMain which has a gtk.Notebook for Partitioning and
  PartitioningUgly (will be renamed). PartitioningMain calls activate()
  in child screens. Ugly screen is auto-selected if partition tables
  can't be read

  06 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added GRP checkbox in Stage.py

  01 Feb 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - Added class Details.  Large portions updated so
  that there is now a tree structure of packages associated with each
  section and category. Many visual changes to the screen.

  31 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>