@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.78 2005/03/07 02:29:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.79 2005/03/08 06:19:02 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  7 Mar 2005; John Laliberte <allanonl@bu.edu>
+  Added a custom package bar where you can fill in custom packages to emerge
+  (space seperated list)
 
   6 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fix for swapped broadcast and netmask in Networking.py. Put empty try/except
